--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -13,7 +13,8 @@ header {
             border-bottom: 1px solid black;
             .logo {
                 img {
-                    height: 70px;
+                    height: 50px;
+                    margin: 10px;
                 }
             }
             .button {
