--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -587,6 +587,10 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 .about-section .about-heading-container {
   text-align: center;
   margin-top: 2em;
+  text-align: start;
+  position: relative;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
 }
 
 .about-section .about-heading-container h1 {
@@ -600,11 +604,47 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
 }
 
+.about-section .about-heading-container h1 {
+  padding: 1em;
+}
+
+.about-section .about-heading-container h1::after {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.about-section .about-heading-container h1::before {
+  content: "";
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.about-section .about-heading-container h1::after {
+  top: 0px;
+  left: 0px;
+  border-left: 3px solid black;
+}
+
+.about-section .about-heading-container h1:hover::before {
+  width: 100%;
+  height: 100%;
+}
+
+.about-section .about-heading-container h1:hover::after {
+  width: 100%;
+  height: 100%;
+}
+
 .about-section .about-heading-container h1:hover {
-  -webkit-box-shadow: blue 0px 0px 0px 2px inset, white 10px -10px 0px -3px, #1fc11b 10px -10px, white 20px -20px 0px -3px, #ffd913 20px -20px, white 30px -30px 0px -3px, #ff9c55 30px -30px, white 40px -40px 0px -3px, #ff5555 40px -40px;
-          box-shadow: blue 0px 0px 0px 2px inset, white 10px -10px 0px -3px, #1fc11b 10px -10px, white 20px -20px 0px -3px, #ffd913 20px -20px, white 30px -30px 0px -3px, #ff9c55 30px -30px, white 40px -40px 0px -3px, #ff5555 40px -40px;
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
+  -webkit-box-shadow: -50px 0px 35px 0px #a9a9a947;
+          box-shadow: -50px 0px 35px 0px #a9a9a947;
 }
 
 .about-section .text-container {
@@ -618,40 +658,51 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   margin-top: 3em;
 }
 
+.about-section .text-container h2 {
+  text-align: center;
+}
+
 .about-section .text-container p {
-  margin: 2em;
-  padding: 2em;
-  width: 40vw;
+  padding-top: 2em;
 }
 
 .about-section .text-container [class^="box-"] {
-  margin-top: 1em;
+  margin-top: 4em;
 }
 
 .about-section .text-container .box-1 {
-  -ms-flex-item-align: start;
-      align-self: flex-start;
+  margin: 2em;
+  padding: 3em;
+  width: 45vw;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   margin-left: 5em;
-  -webkit-box-shadow: 10px 10px 10px 2px #c6c6c6;
-          box-shadow: 10px 10px 10px 2px #c6c6c6;
+  -webkit-box-shadow: -20px 10px 20px 2px #8988882b;
+          box-shadow: -20px 10px 20px 2px #8988882b;
 }
 
 .about-section .text-container .box-2 {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  margin: 2em;
+  margin-bottom: 4em;
+  padding: 3em;
+  width: 45vw;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   margin-right: 5em;
-  -webkit-box-shadow: 10px 10px 10px 2px #c6c6c6;
-          box-shadow: 10px 10px 10px 2px #c6c6c6;
+  -webkit-box-shadow: 0px 20px 20px 2px #76757528;
+          box-shadow: 0px 20px 20px 2px #76757528;
 }
 
 .about-section .text-container .box-3 {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  margin: 2em;
+  padding: 3em;
+  width: 45vw;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   margin-top: 2em;
-  margin-right: 18em;
-  -webkit-box-shadow: 10px 10px 10px 2px #c6c6c6;
-          box-shadow: 10px 10px 10px 2px #c6c6c6;
+  -webkit-box-shadow: 20px 10px 20px 2px #81818131;
+          box-shadow: 20px 10px 20px 2px #81818131;
 }
 
 .contact-section {
@@ -664,9 +715,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  /* .required {
-        color: red;
-    } */
 }
 
 .contact-section .contact-container {
@@ -677,14 +725,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  /* .input-subject-selector {
-            border: 1Px solid #ffffff00;
-            background-color: #ffffff00;
-            width: 100%;
-            optgroup {
-                color: white;
-            }
-        } */
 }
 
 .contact-section .contact-container .form-heading {
@@ -704,16 +744,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   max-width: 30em;
   margin: 1em;
   padding: 1em;
-  /* input[type=text] {
-    
-        }
-        input[type=text]:focus  */
-  /* label {
-                margin-bottom: .2em;
-                display: flex;
-                flex-direction: column;
-                font-weight: bold;
-            } */
 }
 
 .contact-section .contact-container .contact-input-container li {
@@ -723,7 +753,6 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 }
 
 .contact-section .contact-container .contact-input-container input {
-  /* font-style: italic; */
   padding: 7px;
   -webkit-transition: all 0.30s ease-in-out;
   transition: all 0.30s ease-in-out;
@@ -762,16 +791,16 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 
 .contact-section .contact-container .contact-input-container .button span:after {
   content: 'now';
-  position: absolute;
   opacity: 0;
   top: 0;
   right: -20px;
   -webkit-transition: 0.4s;
   transition: 0.4s;
+  position: absolute;
 }
 
 .contact-section .contact-container .contact-input-container .button:hover span {
-  padding-right: 2.2em;
+  padding-right: 2.1em;
 }
 
 .contact-section .contact-container .contact-input-container .button:hover span:after {
@@ -795,9 +824,8 @@ rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
   border: 1Px solid #ffffff00;
   border-bottom: 1px solid #767676;
   height: 10em;
-  min-height: 6em;
+  min-height: 8em;
   width: 100%;
-  /* font-style: italic; */
   padding: 7px;
   -webkit-transition: all 0.30s ease-in-out;
   transition: all 0.30s ease-in-out;
