--- a/individual-work/wba-projekt-2/styles/_about.scss
+++ b/individual-work/wba-projekt-2/styles/_about.scss
@@ -45,6 +45,7 @@
         margin-top: 3em;
         h2 {
             text-align: center;
+            width: 100%;
         }
         p {
             padding-top: 2em;
